--- a/BOJ_2447.md
+++ b/BOJ_2447.md
@@ -2,13 +2,32 @@
 <https://www.acmicpc.net/problem/2447>
 > 분할 정복 문제 (Divide and Conquer)
 ### 문제 설명
-<img width="800" alt="BOJ_2447" src="https://user-images.githubusercontent.com/85975598/136681486-b93fe104-a31a-408b-8838-3b68660d0965.png">
+<img width="800" alt="BOJ_2447" src="https://user-images.githubusercontent.com/85975598/136681486-b93fe104-a31a-408b-8838-3b68660d0965.png"> 
 
 ### 문제 요약
-ㅍ
+3x3행렬에서 중심셀이 비어있는 모양을 기본구조로 하는 프랙탈 구조 그리기.
+
+![fractal](https://user-images.githubusercontent.com/85975598/136683928-9df10b91-8b7f-4f1b-9647-cb27fefaaaf3.png)
+
 
 ### 해설
-
+> 프랙탈 구조를 가장 효율적으로 구현할 수 있는 재귀를 이용했다.
+ 처음에는 3차원 배열을 이용하여 풀어보았다. 하지만 비직관적이고 복잡하여, 2차원 배열로 푸는 것을 다시 생각해보았다.
+> 1. nXn 2차원 배열을 0으로 초기화한다.
+> 2. 재귀함수를 정의한다.
+>    - 종료조건을 n = 3 일 때 기본구조로 정의한다.
+>    - function(n//3)으로 재귀한다.
+>    - 리스트 슬라이싱을 이용하여 각 단계를 3X3행렬로 다루고, 각 셀에는 하위 단계의 전체 행렬을 넣는다.
+>    <pre>
+>    <code>
+>    for i in range(3) :
+>        for j in range(3) :
+>            if i == 1 and j == 1 : 
+>                continue
+>            for k in range(sub) :
+>                arr[sub*i+k][sub*j:sub*(j+1)] = arr[k][:sub]
+>    </code>
+>    </pre>
 
 ### 전체 코드
 ``` python
